# liseh_sparql_2021

./: LISEH Spring School SPARQL 2021.ipynb  install_instructions_jupyter.md  pyproject.toml
