[tool.poetry]
name = "liseh_2021"
version = "0.1.0"
description = "Sparql/Rest Session @Liseh 2021"
authors = ["Matthias Schlögl <matthias.schloegl@oeaw.ac.at>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
SPARQLWrapper = "^1.8.5"
matplotlib = "^3.4.1"
pandas = "^1.2.3"
jupyter = "^1.0.0"
rise = "^5.7.1"
rdflib = "^5.0.0"
ipyleaflet = "^0.13.6"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
